Bug 1137031 - Do not stop restyling when TryStartingTransitions gives us a new style context. r=dbaron a=lsblakk

It is not correct to stop restyling by leaving the old style context on
the frame and returning eRestyleResult_Stop when TryStartingTransition
provides a new, without-animations style context.  This is at least
because the new new style context could have different styles from the
old new style context.